[gd_scene load_steps=12 format=3 uid="uid://bmjnok6mltb47"]

[ext_resource type="Script" uid="uid://c4250ukakx06s" path="res://scripts/ennemy.gd" id="1_n4lfa"]
[ext_resource type="Texture2D" uid="uid://xxy85vq8vu16" path="res://assets/spritesheet-characters-default.png" id="1_rsyu2"]
[ext_resource type="Texture2D" uid="uid://jychp3aj37am" path="res://assets/weapon/swordSilver.png" id="2_n4lfa"]
[ext_resource type="Texture2D" uid="uid://bs2n2r43t344n" path="res://assets/weapon/shieldBronze.png" id="3_batjq"]
[ext_resource type="PackedScene" uid="uid://cdogdm4npma5g" path="res://scenes/killzone.tscn" id="5_batjq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rsyu2"]
size = Vector2(101, 98)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsyu2"]
atlas = ExtResource("1_rsyu2")
region = Rect2(516, 516, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4lfa"]
atlas = ExtResource("1_rsyu2")
region = Rect2(0, 645, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_40eh0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsyu2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4lfa")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_batjq"]
size = Vector2(103, 97)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hkdl5"]
size = Vector2(103, 101)

[node name="Ennemy" type="CharacterBody2D"]
script = ExtResource("1_n4lfa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(12.5, 12)
shape = SubResource("RectangleShape2D_rsyu2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_40eh0")
frame = 1
frame_progress = 0.05716335

[node name="SwordSilver" type="Sprite2D" parent="AnimatedSprite2D"]
position = Vector2(41.000004, 32)
rotation = 1.5707964
scale = Vector2(0.8450003, 0.7357958)
texture = ExtResource("2_n4lfa")

[node name="ShieldBronze" type="Sprite2D" parent="AnimatedSprite2D"]
position = Vector2(-28, 34.000004)
scale = Vector2(0.6571429, 0.5857143)
texture = ExtResource("3_batjq")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(12.5, 12.5)
shape = SubResource("RectangleShape2D_batjq")

[node name="Killzone" parent="." instance=ExtResource("5_batjq")]
position = Vector2(1, 14)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(11.5, -1.5)
shape = SubResource("RectangleShape2D_hkdl5")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
